manifests/gluu-5.1.2.tgz-manifest.yaml
---
# Source: gluu/charts/admin-ui/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: admin-ui
  namespace: default
  labels:
    APP_NAME: admin-ui
    app: my-release-admin-ui
    helm.sh/chart: admin-ui-5.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 8080
    name: http-admin-ui
  selector:
    app: my-release-admin-ui #admin-ui
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/auth-server/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: auth-server
  namespace: default
  labels:
    APP_NAME: auth-server
    app: my-release-auth-server
    helm.sh/chart: auth-server-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 8080
    name: http-auth
  selector:
    app: my-release-auth-server #auth-server
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/casa/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: casa
  namespace: default
  labels:
    APP_NAME: casa
    app: my-release-casa
    helm.sh/chart: casa-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 8080
      name: http-casa
  selector:
    app: my-release-casa
    app.kubernetes.io/instance: my-release
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/config-api/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  # the name must match the application
  name: config-api
  namespace: default
  labels:
    APP_NAME: config-api
    app: my-release-config-api
    helm.sh/chart: config-api-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
    - port: 9444
      name: tcp-config-api-ssl
    - port: 8074
      name: tcp-config-api-http
  selector:
    app: my-release-config-api
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/fido2/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: fido2
  namespace: default
  labels:
    APP_NAME: fido2
    app: my-release-fido2
    helm.sh/chart: fido2-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 8080
    name: http-fido2
  selector:
    app: my-release-fido2 #fido2
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/scim/templates/service.yml
apiVersion: v1
kind: Service
metadata:
  name: scim
  namespace: default
  labels:
    APP_NAME: scim
    app: my-release-scim
    helm.sh/chart: scim-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  ports:
  - port: 8080
    name: http-scim
  selector:
    app: my-release-scim #scim
  sessionAffinity: None
  sessionAffinityConfig:
    clientIP:
      timeoutSeconds: 10800
---
# Source: gluu/charts/admin-ui/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-admin-ui
  namespace: default
  labels:
    APP_NAME: admin-ui
    app: my-release-admin-ui
    helm.sh/chart: admin-ui-5.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-release-admin-ui
  template:
    metadata:
      labels:
        APP_NAME: admin-ui
        app: my-release-admin-ui
    spec:
      dnsPolicy: ""
      containers:
      - name: admin-ui
        imagePullPolicy: IfNotPresent
        image: ghcr.io/gluufederation/flex/admin-ui:5.1.2-1
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
        ports:
        - name: http-admin-ui
          containerPort: 8080
        lifecycle:
          {}
        volumeMounts:
        
        
        
          - name: sql-pass
            mountPath: /etc/jans/conf/sql_password
            subPath: sql_password
        livenessProbe:
          failureThreshold: 20
          initialDelaySeconds: 60
          periodSeconds: 25
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        readinessProbe:
          failureThreshold: 20
          initialDelaySeconds: 60
          periodSeconds: 25
          tcpSocket:
            port: 8080
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2000m
            memory: 2000Mi
          requests:
            cpu: 2000m
            memory: 2000Mi
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.gluu.org
      volumes:
      
      
      
        - name: sql-pass
          secret:
            secretName: my-release-sql-pass
---
# Source: gluu/charts/auth-server/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-auth-server
  namespace: default
  labels:
    APP_NAME: auth-server
    app: my-release-auth-server
    helm.sh/chart: auth-server-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-release-auth-server
  template:
    metadata:
      labels:
        APP_NAME: auth-server
        app: my-release-auth-server
    spec:
      dnsPolicy: ""
      containers:
      - name: auth-server
        imagePullPolicy: IfNotPresent
        image: ghcr.io/janssenproject/jans/auth-server:1.1.2-2
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
        ports:
        - name: http-auth
          containerPort: 8080
        
        lifecycle:
          {}
        volumeMounts:
        
        
        
        
        
        
        
        
        
        
          - name: sql-pass
            mountPath: /etc/jans/conf/sql_password
            subPath: sql_password
        livenessProbe:
          exec:
            command:
            - python3
            - /app/scripts/healthcheck.py
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          exec:
            command:
            - python3
            - /app/scripts/healthcheck.py
          initialDelaySeconds: 25
          periodSeconds: 25
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 2500m
            memory: 2500Mi
          requests:
            cpu: 2500m
            memory: 2500Mi
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.gluu.org
      volumes:
      
      
      
      
      
      
      
      
      
      
        - name: sql-pass
          secret:
            secretName: my-release-sql-pass
---
# Source: gluu/charts/casa/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-casa
  namespace: default
  labels:
    APP_NAME: casa
    app: my-release-casa
    helm.sh/chart: casa-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-release-casa
      app.kubernetes.io/instance: my-release
  template:
    metadata:
      labels:
        APP_NAME: casa
        app: my-release-casa
        app.kubernetes.io/instance: my-release
    spec:
      dnsPolicy: ""
      securityContext:
        {}
      containers:
        - name: casa
          securityContext:
            {}
          image: "ghcr.io/janssenproject/jans/casa:1.1.2-2"
          imagePullPolicy: IfNotPresent
          ports:
            - name: http-casa
              containerPort: 8080
              protocol: TCP
            
          lifecycle:
            {}
          volumeMounts:
          
          
          
            - name: sql-pass
              mountPath: /etc/jans/conf/sql_password
              subPath: sql_password
          livenessProbe:
            httpGet:
              path: /jans-casa/health-check
              port: http-casa
            initialDelaySeconds: 25
            periodSeconds: 25
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /jans-casa/health-check
              port: http-casa
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          resources:
            limits:
              cpu: 500m
              memory: 500Mi
            requests:
              cpu: 500m
              memory: 500Mi
      volumes:
      
      
      
        - name: sql-pass
          secret:
            secretName: my-release-sql-pass
      hostAliases:
       - ip: 22.22.22.22
         hostnames:
         - demoexample.gluu.org
---
# Source: gluu/charts/config-api/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-config-api
  namespace: default
  labels:
    APP_NAME: config-api
    app: my-release-config-api
    helm.sh/chart: config-api-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-release-config-api
  template:
    metadata:
      labels:
        app: my-release-config-api
        release: my-release
    spec:
      dnsPolicy: ""
      containers:
        - name: config-api
          image: "ghcr.io/janssenproject/jans/config-api:1.1.2-2"
          securityContext:
            runAsUser: 1000
            runAsNonRoot: true
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 9444
            - containerPort: 8074
            
          livenessProbe:
            httpGet:
              path: /jans-config-api/api/v1/health/live
              port: 8074
            initialDelaySeconds: 30
            periodSeconds: 30
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: jans-config-api/api/v1/health/ready
              port: 8074
            initialDelaySeconds: 25
            periodSeconds: 25
            timeoutSeconds: 5
          lifecycle:
            {}
          volumeMounts:
          
          
          
            - name: sql-pass
              mountPath: /etc/jans/conf/sql_password
              subPath: sql_password
          resources:
            limits:
              cpu: 1000m
              memory: 1200Mi
            requests:
              cpu: 1000m
              memory: 1200Mi
      volumes:
      
      
      
        - name: sql-pass
          secret:
            secretName: my-release-sql-pass
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.gluu.org
---
# Source: gluu/charts/fido2/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-fido2
  namespace: default
  labels:
    APP_NAME: fido2
    app: my-release-fido2
    helm.sh/chart: fido2-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-release-fido2
  template:
    metadata:
      labels:
        APP_NAME: fido2
        app: my-release-fido2
    spec:
      dnsPolicy: ""
      containers:
      - name: fido2
        imagePullPolicy: IfNotPresent
        image: ghcr.io/janssenproject/jans/fido2:1.1.2-2
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
        ports:
        - name: http-fido2
          containerPort: 8080
        
        lifecycle:
          {}
        volumeMounts:
        
        
        
          - name: sql-pass
            mountPath: /etc/jans/conf/sql_password
            subPath: sql_password
        livenessProbe:
          httpGet:
            path: /jans-fido2/sys/health-check
            port: http-fido2
          initialDelaySeconds: 25
          periodSeconds: 25
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /jans-fido2/sys/health-check
            port: http-fido2
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 500Mi
          requests:
            cpu: 500m
            memory: 500Mi
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.gluu.org
      volumes:
      
      
      
        - name: sql-pass
          secret:
            secretName: my-release-sql-pass
---
# Source: gluu/charts/scim/templates/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-release-scim
  namespace: default
  labels:
    APP_NAME: scim
    app: my-release-scim
    helm.sh/chart: scim-1.1.2
    app.kubernetes.io/instance: my-release
    app.kubernetes.io/version: "5.1.2"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: my-release-scim
  template:
    metadata:
      labels:
        APP_NAME: scim
        app: my-release-scim
    spec:
      dnsPolicy: ""
      containers:
      - name: scim
        imagePullPolicy: IfNotPresent
        image: ghcr.io/janssenproject/jans/scim:1.1.2-2
        securityContext:
          runAsUser: 1000
          runAsNonRoot: true
        resources:
          limits:
            cpu: 1000m
            memory: 1200Mi
          requests:
            cpu: 1000m
            memory: 1200Mi
        ports:
        - name: http-scim
          containerPort: 8080
        
        lifecycle:
          {}
        volumeMounts:
        
        
        
        - name: sql-pass
          mountPath: /etc/jans/conf/sql_password
          subPath: sql_password
        livenessProbe:
          httpGet:
            path: /jans-scim/sys/health-check
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 30
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /jans-scim/sys/health-check
            port: 8080
          initialDelaySeconds: 25
          periodSeconds: 25
          timeoutSeconds: 5
      hostAliases:
      - ip: 22.22.22.22
        hostnames:
        - demoexample.gluu.org
      volumes:
      
      
      
        - name: sql-pass
          secret:
            secretName: my-release-sql-pass
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-openid-config
  labels:
    app: my-release-nginx-ingress-openid-config
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/.well-known/openid-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/openid-configuration
            pathType: Exact
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-device-code
  labels:
    app: my-release-nginx-ingress-device-code
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/device_authorization.htm
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /device-code
            pathType: Exact
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-firebase-messaging
  labels:
    app: my-release-nginx-ingress-firebase-messaging
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/firebase-messaging-sw.js
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /firebase-messaging-sw.js
            pathType: Exact
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-uma2-config
  labels:
    app: my-release-nginx-ingress-uma2-config
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/restv1/uma2-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/uma2-configuration
            pathType: Exact
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-webfinger
  labels:
    app: my-release-nginx-ingress-webfinger
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/.well-known/webfinger
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/webfinger
            pathType: Exact
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-webdiscovery
  labels:
    app: my-release-nginx-ingress-webdiscovery
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/.well-known/simple-web-discovery
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/simple-web-discovery
            pathType: Exact
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-config-api
  labels:
    app: my-release-nginx-ingress-config-api
  annotations:
    nginx.org/ssl-services: "configapi"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /jans-config-api
            pathType: Prefix
            backend:
              service:
                name: config-api
                port:
                  number: 8074
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-u2f-config
  labels:
    app: my-release-nginx-ingress-u2f-config
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/rewrite-target: /jans-auth/restv1/fido-configuration
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /.well-known/fido-configuration
            pathType: Exact
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-release-nginx-ingress-auth-server
  labels:
    app: my-release-nginx-ingress-auth-server
  annotations:
    nginx.org/ssl-services: "auth-server"
    nginx.ingress.kubernetes.io/proxy-next-upstream: "error timeout invalid_header http_500 http_502 http_503 http_504"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - "demoexample.gluu.org"
      secretName: tls-certificate
  rules:
    - host: "demoexample.gluu.org"
      http:
        paths:
          - path: /jans-auth
            pathType: Prefix
            backend:
              service:
                name: auth-server
                port:
                  number: 8080
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
---
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
---
---
# Source: gluu/charts/nginx-ingress/templates/ingress.yaml
---
